Source/WebKit/Shared/WebPageCreationParameters.h
@@ -59,7 +59,8 @@ namespace WebKit {
 
 struct WebPageCreationParameters {
     void encode(IPC::Encoder&) const;
-    static bool decode(IPC::Decoder&, WebPageCreationParameters&);
+    static std::optional<WebPageCreationParameters> decode(IPC::Decoder&);
+    using ModernDecoder = std::true_type;
 
     WebCore::IntSize viewSize;
 
